<resources>
    <string name="app_name">나만의멤버십</string>
    <string name="title_activity_show_messages">ShowMessages</string>

    <!-- WebAPI Key-->

    <!-- Common Strings -->
    <string name="db_name">barcodeimg.db</string>

    <!-- Common Ui-->
    <string name="string_ok">확인</string>
    <string name="string_cancel">취소</string>

    <!-- Alert Dialog -->
    <string name="string_alert_setdata_from_google">서버에 백업중인 멤버십 리스트가 초기화되고 새로 생성됩니다. 계속 하시겠습니까?</string>
    <string name="string_alert_getdata_from_google">현재 멤버십 리스트가 초기화되고 새로 생성됩니다. 계속 하시겠습니까?</string>
    <string name="string_alert_deletedata_from_google">서버에 백업중인 멤버십 리스트 및 계정 정보를 삭제합니다. 계속 하시겠습니까?</string>
    <string name="string_alert_logout_from_google">%1$s 계정에서 로그아웃 합니다. 계속 하시겠습니까?(서버에 연동된 데이터는 지워지지 않습니다.)</string>
    <string name="string_alert_select_setdata">데이터 백업</string>
    <string name="string_alert_select_getdata">데이터 가져오기</string>
    <string name="string_alert_select_deletedata">데이터 삭제</string>
    <string name="string_alert_select_logout">로그아웃</string>
    <string name="string_alert_notice">공지사항</string>

    <!-- Select Dialog -->
    <string name="string_modify_barcode">바코드 수정</string>
    <string name="string_delete_barcode">바코드 삭제</string>
    <string name="string_share_barcode">바코드 공유</string>

    <string name="string_input_key">직접 입력</string>
    <string name="string_input_scan">카메라 스캔</string>
    <string name="string_input_image">이미지 스캔</string>

    <!-- AddFromDialog -->
    <string name="var_code_39">CODE_39</string>
    <string name="var_code_93">CODE_93</string>
    <string name="var_code_128">CODE_128</string>
    <string name="var_ean_8">EAN_8</string>
    <string name="var_ean_13">EAN_13</string>
    <string name="var_pdf_417">PDF_417</string>
    <string name="var_upc_a">UPC_A</string>
    <string name="var_upc_e">UPC_E</string>
    <string name="var_itf">ITF</string>
    <string name="var_codabar">CODABAR</string>
    <string name="var_qr_code">QR_CODE</string>
    <string name="var_maxicode">MAXICODE</string>
    <string name="var_aztec">AZTEC</string>

    <!-- Common Strings -->
    <string name="string_request_add_new_barcode">이곳을 눌러서 새 바코드를 입력해 주세요</string>
    <string name="string_failed_make_barcode">바코드 값 오류입니다. 삭제 후 다시 생성해 주세요</string>
    <string name="string_request_pic_color">색상을 선택해 주세요</string>
    <string name="string_request_write_name">이름을 입력해 주세요</string>
    <string name="string_unhandled_exception">알 수 없는 오류</string>
    <string name="string_open_source_licensee">오픈소스 라이센스</string>
    <string name="string_not_supported_format">지원하지 않는 바코드 포맷입니다.</string>
    <string name="string_scan_guide">바코드를 사각형 안에 비춰주세요. \n스캔이 잘 안될 경우 주위 배경을 깔끔하게 해주세요. \n볼륨 UP/DOWN 버튼으로 플래시를 켜고 끌 수 있습니다.</string>
    <string name="string_require_camera_permission">바코드 스캔을 위해 카메라 사용 권한을 허용해야 합니다.</string>
    <string name="string_sign_in_google">구글 계정 %1%s 로 로그인 하였습니다.</string>
    <string name="string_cannot_sign_in_google">로그인에 실패했습니다.</string>
    <string name="string_success_sign_out_google">로그아웃</string>
    <string name="string_failed_sign_out_google">로그아웃 실패</string>
    <string name="string_success_set_backup_google">백업 완료</string>
    <string name="string_failed_set_backup_google">백업 실패</string>
    <string name="string_success_delete_backup_google">삭제 완료</string>
    <string name="string_failed_delete_backup_google">삭제 실패</string>
    <string name="string_success_get_backup_google">불러오기 완료</string>
    <string name="string_failed_get_backup_google">불러오기 실패</string>
    <string name="string_request_backkey">한번 더 누르면 종료합니다.</string>
    <string name="string_autobright_on">자동 밝기 ON</string>
    <string name="string_autobright_off">자동 밝기 OFF</string>
    <string name="string_cannot_find_barcode">바코드를 인식할 수 없습니다.</string>
    <string name="string_unknown_error">알 수 없는 에러</string>

    <!-- Progress Dialog -->
    <string name="string_wait_init_barcode">멤버십 리스트 생성중..(최초 1회)</string>
    <string name="string_wait_signin">계정 연결중..</string>
    <string name="string_wait_export">데이터를 내보내는 중..</string>
    <string name="string_wait_import">데이터를 가져오는 중..</string>
    <string name="string_wait_delete">데이터를 지우는 중..</string>
    <string name="string_wait_logout">로그아웃 중..</string>

    <!-- GNB / Toolbar -->
    <string name="string_menu_home">멤버십 리스트</string>
    <string name="string_menu_settings">설정</string>
    <string name="string_menu_privacy">개인정보처리방침</string>
    <string name="string_menu_liscense">오픈소스 라이센스</string>

    <!-- Settings -->
    <string name="string_title_version_settings">버전</string>
    <string name="string_title_backup_settings">데이터 관리</string>
    <string name="string_subtitle_backup_settings">Google 계정을 이용해서 멤버십 데이터를 관리할 수 있습니다.</string>
    <string name="string_backup_settings">백업 설정</string>
    <string name="string_title_bright_settings">화면 밝기 자동 조정</string>
    <string name="string_subtitle_bright_settings">멤버십 바코드 확대시 화면 밝기를 최대치로 설정합니다.</string>
    <string name="string_bright_on_settings">ON</string>
    <string name="string_bright_off_settings">OFF</string>

    <!-- License -->
    <string name="string_title_liscense">Android용 나만의멤버십 앱은
        \n오픈 소스 소프트웨어를
        \n사용하여 만들어졌습니다.
        \n\ncom.google.zxing
        \ncom.google.code.gson
        \norg.greenrobot:eventbus
        \norg.mod4j.org.apache.commons
        \norg.jetbrains.anko
        \nio.reactivex.rxjava2:rxkotlin
        \nio.reactivex.rxjava2:rxandroid
        \nio.realm:realm
        \ngun0912.ted:tedpermission</string>

</resources>
